[project]
name = "ai-course11"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.2.9",
    "dotenv>=0.9.9",
    "langchain-core>=0.3.66",
    "langchain-google-genai>=2.1.5",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.0",
    "uvicorn>=0.34.3",
]
